
2.9100
------

2.9112.521  new: x86/amd64: RC5-72 AVX2 core
            imp: IPv6 support for Windows clients (#2982)
            imp: x86/amd64: Intel Skylake (#4615)
            imp: gpu/OpenCL: support any number of OCL platforms on PC
            imp: gpu: make -gpuinfo be similar on all types of devices
            imp: gpu: improved GPU initialization and error diagnostic

2.9111.520  imp: all: support for benchmarks > 2Gkeys/sec
            chg: all: increase max threads to 512
            imp: x86/amd64: Intel Sandy Bridge EE (#4456)
            imp: x86/amd64: AMD FX (#4455)
            imp: gpu: add -devicenum option (#4306)
            imp: stream: identification of HD7950/HD7970 GPUs
            imp: x86/amd64: AMD APU detection/selection (#4485)
            fix: win64: window settings were not saved to registry
            fix: win: misc gui fixes on 'core throughput' page
            imp: openbsd: cpu and altivec identification
            fix: all: regression in OGR-NG codebase (#4295)
            new: IPv6 support (#2982)
            imp: morphos: Battery/AC power det & CPU temp query
            new: opencl: New rc5-72 cores
            imp: morphos: use standard MUI List instead of NList
            imp: x86/amd64: AMD APU detection/selection (#4536)
            imp: x86: Pentium M core selection (#4534)
            imp: x86/amd64: Intel Ivy Bridge/Haswell
                 detection/selection (#4514,#4533)
            imp: x86/amd64: AMD FX detection/selection (#4497)
            imp: macosx: better pause-on-battery detection on 10.7+
            imp: cellbe: faster OGR-NG SPU ASM core
            fix: linux: misc installation (dnetc -install) issues
            imp: all: try to find partial packet started by matched core
            fix: win64: screensaver broken (#4434)
            imp: cuda: support CUDA 5.5, 6.0, 6.5, 7.0
            imp: x86/amd64: Intel Haswell/Xeon detection (#4578,#4579)
            imp: cuda: better codegen